implemented search using keyword with live update, sorting based on priority, also made the database resiliant, used new things such as an Iterator, etc... next is to filter tasks using start and end times(probably will need some extra logic).

--- a/app/src/main/res/layout/fragment_task_item.xml
+++ b/app/src/main/res/layout/fragment_task_item.xml
@@ -50,8 +50,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:background="@drawable/priority_high"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="Priority: High"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            />
 
         <!-- Completion Status -->
         <TextView
