--- a/app/src/main/res/menu/tool_bar_menu.xml
+++ b/app/src/main/res/menu/tool_bar_menu.xml
@@ -7,6 +7,14 @@
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
         android:title="Search"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.widget.SearchView" />
+        />
+    <item
+        android:id="@+id/action_sort"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
+        android:title="Sort"
+        app:showAsAction="ifRoom"
+        />
 
 </menu>
