editing tasks and notification managment

--- a/app/src/main/res/drawable/gradiant_background.xml
+++ b/app/src/main/res/drawable/gradiant_background.xml
@@ -6,6 +6,6 @@
     <gradient
         android:type="linear"
         android:angle="-90"
-        android:startColor="@color/green_700"
-        android:endColor="@color/teal_900" />
+        android:startColor="?attr/colorPrimary"
+        android:endColor="?attr/colorSecondary" />
 </shape>
