--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,18 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="60dp"
         app:cardCornerRadius="16dp"
-        app:cardBackgroundColor="#B3FFFFFF"
+        app:cardBackgroundColor="?attr/colorSurface"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:padding="16dp"
+            >
 
             <!-- Logo ImageView -->
             <ImageView
@@ -44,7 +47,7 @@
                 android:layout_marginTop="16dp"
                 android:gravity="center"
                 android:text="Anti-ProcrastinTOR 3000"
-                android:textColor="@color/green_500"
+                android:textColor="?attr/colorSecondary"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/logoImageView"
@@ -59,7 +62,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="20dp"
-                android:backgroundTint="#09D1C7"
+                android:backgroundTint="?attr/colorSecondaryVariant"
                 android:text="Sign In"
                 android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
