--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -19,7 +19,7 @@
             android:icon="@drawable/ic_baseline_done_all_24" />
         <item
             android:id="@+id/nav_search"
-            android:title="Search"
+            android:title="filter"
             android:icon="@drawable/ic_baseline_content_paste_search_24" />
     </group>
 
