--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.Project1" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/green_500</item>
+        <item name="colorPrimaryVariant">@color/green_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -11,7 +11,12 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="colorOnBackground">#000000</item> <!-- Black for light mode -->
         <!-- Customize your theme here. -->
+        <!-- Custom theme attribute for text color -->
+        <item name="hintTextColor">#999999</item> <!-- Gray for light mode -->
+
+        <item name="colorSurface">#E4E3E3</item> <!-- White for light mode -->"
 
     </style>
 
@@ -21,6 +26,5 @@
     </style>
 
     <style name="Theme.Project1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="Theme.Project1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
