--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="?attr/colorSurface"
         android:elevation="8dp"
         app:cardCornerRadius="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Update Email Address"
-                android:textColor="#0C6478"
+                android:textColor="?attr/colorSecondary"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="8dp" />
@@ -42,6 +42,7 @@
                 android:hint="Enter your new email"
                 android:inputType="textEmailAddress"
                 android:background="#E7EAED"
+                android:textColorHint="@color/hint_color"
                 android:padding="12dp"
                 android:textColor="#0C6478"
                 android:layout_marginBottom="16dp" />
@@ -53,6 +54,7 @@
                 android:hint="Enter current password"
                 android:inputType="textPassword"
                 android:background="#E7EAED"
+                android:textColorHint="@color/hint_color"
                 android:padding="12dp"
                 android:textColor="#0C6478"
                 android:layout_marginBottom="16dp" />
@@ -61,7 +63,7 @@
                 android:id="@+id/updateEmailButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#46DFB1"
+                android:backgroundTint="?attr/colorSecondary"
                 android:text="Update Email"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold" />
@@ -76,7 +78,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="?attr/colorSurface"
         android:elevation="8dp"
         app:cardCornerRadius="16dp"
         app:layout_constraintTop_toBottomOf="@id/emailUpdateCard"
@@ -93,16 +95,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Update Password"
-                android:textColor="#0C6478"
+                android:textColor="?attr/colorSecondary"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp" />
+                android:layout_marginBottom="8dp"
+
+                />
 
             <EditText
                 android:id="@+id/currentPasswordInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter current password"
+                android:textColorHint="@color/hint_color"
                 android:inputType="textPassword"
                 android:background="#E7EAED"
                 android:padding="12dp"
@@ -114,6 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter new password"
+                android:textColorHint="@color/hint_color"
                 android:inputType="textPassword"
                 android:background="#E7EAED"
                 android:padding="12dp"
@@ -125,6 +131,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Confirm new password"
+                android:textColorHint="@color/hint_color"
                 android:inputType="textPassword"
                 android:background="#E7EAED"
                 android:padding="12dp"
@@ -135,7 +142,7 @@
                 android:id="@+id/updatePasswordButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#46DFB1"
+                android:backgroundTint="?attr/colorSecondary"
                 android:text="Update Password"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold" />
@@ -150,7 +157,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="?attr/colorSurface"
         android:elevation="8dp"
         app:cardCornerRadius="16dp"
         app:layout_constraintTop_toBottomOf="@id/passwordUpdateCard"
@@ -161,14 +168,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="16dp">
+            android:padding="16dp"
+            >
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Enable Dark Mode"
-                android:textColor="#15919B"
+                android:textColor="?attr/colorSecondary"
                 android:textSize="16sp" />
 
             <Switch
@@ -185,7 +193,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#46DFB1"
+        android:backgroundTint="?attr/colorSecondary"
         android:text="Back to Home"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
