--- a/app/src/main/res/layout/edit_task_dialog.xml
+++ b/app/src/main/res/layout/edit_task_dialog.xml
@@ -8,6 +8,7 @@
 
     <!-- Task Title Input -->
     <EditText
+
         android:id="@+id/edit_text_task_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,6 +29,7 @@
         android:hint="Task Description"
         android:textColor="@android:color/secondary_text_dark"
         android:textColorHint="@color/hint_color"
+
         android:inputType="textMultiLine"
         android:padding="16dp" />
 
@@ -42,9 +44,11 @@
         android:hint="Due Date (YYYY-MM-DD)"
         android:textColor="@android:color/secondary_text_dark"
         android:textColorHint="@color/hint_color"
+
         android:inputType="date"
         android:padding="16dp"
-        android:background="@android:drawable/editbox_background" />
+        android:background="@android:drawable/editbox_background"
+        />
 
     <!-- Due Time Input -->
     <EditText
@@ -57,26 +61,13 @@
         android:hint="Due Time (HH:MM)"
         android:textColor="@android:color/secondary_text_dark"
         android:textColorHint="@color/hint_color"
+
         android:inputType="time"
         android:padding="16dp"
-        android:background="@android:drawable/editbox_background" />
+        android:background="@android:drawable/editbox_background"
+        />
 
-    <!-- Reminder Date Input -->
-    <EditText
-        android:id="@+id/edit_text_task_reminder_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:clickable="true"
-        android:focusable="false"
-        android:hint="Reminder Date (YYYY-MM-DD)"
-        android:textColor="@android:color/secondary_text_dark"
-        android:textColorHint="@color/hint_color"
-        android:inputType="date"
-        android:padding="16dp"
-        android:background="@android:drawable/editbox_background" />
-
-    <!-- Reminder Time Input -->
+<!--    reminder info-->
     <EditText
         android:id="@+id/edit_text_task_reminder_time"
         android:layout_width="match_parent"
@@ -84,13 +75,28 @@
         android:layout_marginTop="8dp"
         android:clickable="true"
         android:focusable="false"
-        android:hint="Reminder Time (HH:MM)"
+        android:hint="Remider Date (YYYY-MM-DD)"
         android:textColor="@android:color/secondary_text_dark"
         android:textColorHint="@color/hint_color"
-        android:inputType="time"
+        android:inputType="date"
         android:padding="16dp"
-        android:background="@android:drawable/editbox_background" />
+        android:background="@android:drawable/editbox_background"
+        />
 
+    <EditText
+        android:id="@+id/edit_text_task_reminder_time_t"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:focusable="false"
+        android:hint="Remider Time (HH:MM)"
+        android:textColor="@android:color/secondary_text_dark"
+        android:textColorHint="@color/hint_color"
+        android:inputType="date"
+        android:padding="16dp"
+        android:background="@android:drawable/editbox_background"
+        />
     <!-- Priority Spinner -->
     <Spinner
         android:id="@+id/spinner_task_priority"
@@ -98,6 +104,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:padding="15dp" />
+
+    <!-- Completed Checkbox -->
 
     <!-- Buttons Layout -->
     <LinearLayout
@@ -123,6 +131,7 @@
             android:background="@color/cardview_shadow_start_color"
             android:text="Add"
             android:textColor="@android:color/white" />
+
     </LinearLayout>
 
 </LinearLayout>
