--- a/app/src/main/res/layout/item_section_header.xml
+++ b/app/src/main/res/layout/item_section_header.xml
@@ -3,12 +3,11 @@
     android:id="@+id/header_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#EEEEEE"
+    android:background="@drawable/rounded_background_n"
     android:gravity="start"
-    android:padding="8dp"
     android:textColor="?attr/colorOnBackground"
-    android:backgroundTint="?attr/colorSurface"
     android:textSize="16sp"
     android:textStyle="bold"
     android:text="Todo List"
+    android:paddingStart="16dp"
     />
